[tool.poetry]
name = "suggestion-box"
version = "0.1.0"
description = "Pedagogical FastAPI + BigQuery demo"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
google-cloud-bigquery = "*"
pydantic = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
